--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -17,6 +17,10 @@
 
         <div class="row">
             <div class="col-sm-8">
+
+                <%# 0.5625 w:w ratio %>
+                <iframe width="480" height="270" src="https://www.youtube-nocookie.com/embed/dLcNdWQ92a8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+
                 <h2>About Us</h2>
                 <p>As a classified advertisement platform Connechub is "Connecting you with jobs, goods, and services in your community."</p>
                 <p>With Connechub you can post a video ad from any source such as; your cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera and any other video source.</p>
