Able to create and update a Listing in UAT testing logic.

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -3,7 +3,7 @@
         <div class="panel panel-default">
 
             <div class="panel-heading">
-                <h2>Edit New Listing</h2>
+                <h2>Edit Listing</h2>
                 <div class = "small-heading">(All fields required.) </div>
             </div>
 
