--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
                   <% @listings.each do |listing| %>
                       <div class="panel panel-default pin-item">
                           <div class="panel-body">
-                            <%= render :partial => 'partials/item_card', locals: {listing: listing}  %>
+                            <%= link_to image_tag(listing.presigned_media_url, class: "img-responsive"), listing %>
                           </div>
                             <div class="panel-footer pin-content">
                             <div class="price"><b>$<%= listing.price %></b></div>
