--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -54,21 +54,17 @@
 
 <script>
 $("#listings_submit").on("click", function() {
-    console.log('qwer')
     if (!$("#new_listing_upload")[0].checkValidity()) {
-        console.log('asdf')
         $("#new_listing_upload").find("#submit-hidden").click();
     }
 });
 
 $(function () {
-    console.log('zxcv')
     var media_file = [];
 
     document.getElementById('fileupload').onchange = setFileInfo;
 
     function setFileInfo() {
-        console.log('tyui')
         var files = this.files;
         media_file.push(files[0]);
         var video = document.createElement('video');
@@ -119,16 +115,19 @@ $(function () {
             dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
             replaceFileInput: false,
             add: function (e, data) {
+                console.log('add: function ')
                 $('button#listings_submit').off('click').on('click', function () {
                     $("#overlay").toggle()
                     data.submit();
                 });
             },
             progressall: function (e, data) {
+                console.log('progressall: f')
                 var progress = parseInt(data.loaded / data.total * 100, 10);
                 progressBar.css('width', progress + '%')
             },
             start: function (e) {
+                console.log('start: functio')
                 submitButton.prop('disabled', true);
                 progressBar.
                     css('background', 'green').
@@ -137,6 +136,7 @@ $(function () {
                     text("Loading...");
             },
             done: function(e, data) {
+                console.log('done: function')
                 submitButton.prop('disabled', false);
                 progressBar.text("Uploading done");
 
