Working on Listing Update VW sub_cat DDL

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -152,7 +152,7 @@
 <%= render "processing_overlay" %>
 
 <script>
-$(function () {
+$(document).on('ready turbolinks:load', function() {
     // trigger populating sub_cat's based on cat_id
     getSubcategories($('#listing_category_id').val());
 
