--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -21,7 +21,9 @@
                         <div class="form-control">
                             <%= f.select :category_id,
                                 Category.all.map {|f| [f.name, f.id]},
-                                { include_blank: true },
+                                {
+                                    include_blank: true
+                                },
                                 required: true
                             %>
                         </div>
