cont working onf Listing edit form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
     <%= render "partials/google_analytics" %>
+    <script>
+    console.log('head')
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
