--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -1,3 +1,7 @@
+<script>
+    console.log('head')
+</script>
+
 <div class="col-md-8 col-md-offset-2">
     <div class="row">
         <div class="panel panel-default">
