--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -163,10 +163,11 @@ $(function () {
         }
     })
 });
+console.log('DOM: loaded 2')
 </script>
 
 <script>
-console.log('DOM: loaded 2')
+// console.log('DOM: loaded 2')
 
 // SELECT:OPTION cat_DDL based on Listing data
 // wait for sub_cat DDL to populate
