cont working onf Listing edit form

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -155,7 +155,7 @@
 
 <script>
 console.log('DOM: loaded 1')
-$(document).on('ready turbolinks:load', function() {
+$(function () {
     console.log('DOM: ready 1')
     $('#listings_submit').on('click', function(){
         console.log('LOGIC 1')
