--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -155,8 +155,11 @@
 
 <script>
 $(function () {
+    console.log('DON loaded')
     $('#listings_submit').on('click', function(){
+        console.log('listings_submit.click')
         if (document.getElementById('new_listing').checkValidity() == true){
+            console.log('validation ok')
             $("#overlay").toggle()
         }
     })
