--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -155,7 +155,7 @@
 
 <script>
 $(function () {
-    console.log('DON loaded')
+    console.log('DOM loaded')
     $('#listings_submit').on('click', function(){
         console.log('listings_submit.click')
         if (document.getElementById('new_listing').checkValidity() == true){
