FIXED listing upload button error.

--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -41,7 +41,7 @@
 
                 <div class="input-group">
                     <div class="actions">
-                        <input type="button" class="btn btn-success" id="listings_submit" value="Submit">
+                        <button class="btn btn-success" id="listings_submit">Submit</button>
                     </div>
                 </div>
 
