Syntax error in listing show due to new upvote logic.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -60,7 +60,7 @@
             <hr>
             <span>
                 <b><%= @listing.title %></b>
-                <%= if @user.id.present? %>
+                <% if @user.id.present? %>
                     <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
                         <i class = "fa fa-heart"></i>
                         <%= @listing.votes_for.size %>
