FIXED referance to element to form validate on.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -72,7 +72,7 @@
 <script>
 $(function () {
     $('#profile_submit').on('click', function(){
-        if (document.getElementById('new_listing').checkValidity() == true){
+        if (document.getElementById('edit_user').checkValidity() == true){
             $("#overlay").toggle()
         }
     })
