FIXED Listing show not working if user not defined.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -59,8 +59,7 @@
         <div class="hero-title">
             <hr>
             <span>
-                <b><%= @listing.title %></b>
-                <% if @user.id.present? %>
+                <% if @user.present? %>
                     <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
                         <i class = "fa fa-heart"></i>
                         <%= @listing.votes_for.size %>
