MOVED Cypress examples out of ./integration dir. ADDED Listing title back to show VW.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -59,6 +59,7 @@
         <div class="hero-title">
             <hr>
             <span>
+                <b><%= simple_format (@listing.title) %></b>
                 <% if @user.present? %>
                     <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
                         <i class = "fa fa-heart"></i>
