DISABLED Listing VW liking for guests in the UI.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -63,9 +63,11 @@
                 <b>
                     <%= simple_format (@listing.title) %>
                 </b>
-                <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
-                    <i class = "fa fa-heart"></i>
-                    <%= @listing.votes_for.size %>
+                <% if @user.present? %>
+                    <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
+                        <i class = "fa fa-heart"></i>
+                        <%= @listing.votes_for.size %>
+                    <% end %>
                 <% end %>
             </span>
         </div>
