--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,8 +6,10 @@
         <p>
             <div>
                 <%= videojs_rails sources: {
-                    mp4: @presigned_media_url,
-                    mov: @presigned_media_url
+                    avi: @presigned_media_url,
+                    mkv: @presigned_media_url,
+                    mov: @presigned_media_url,
+                    mp4: @presigned_media_url
                 },
                 controls: true,
                 autoplay: false,
