--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -65,7 +65,7 @@
                 <b>
                     <%= simple_format (@listing.title) %>
                 </b>
-                <%= link_to like_listing_path(@listing, method: :put, class: 'pull-right') do %>
+                <%= link_to like_listing_path(@listing), method: :put, class: 'pull-right' do %>
                     <i class = "fa fa-heart"></i>
                     <%= @listing.votes_for.size %>
                 <% end %>
