ADDED logic to allow guests to only view upvotes on a Listing.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -70,6 +70,9 @@
                         <i class = "fa fa-heart"></i>
                         <%= @listing.votes_for.size %>
                     <% end %>
+                <% else %>
+                    <i class = "fa fa-heart"></i>
+                    <%= @listing.votes_for.size %>
                 <% end %>
             </span>
         </div>
