--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -71,8 +71,10 @@
                         <%= @listing.votes_for.size %>
                     <% end %>
                 <% else %>
-                    <i class = "fa fa-heart"></i>
-                    <%= @listing.votes_for.size %>
+                    <div class="pull-right">
+                        <i class = "fa fa-heart"></i>
+                        <%= @listing.votes_for.size %>
+                    <div>
                 <% end %>
             </span>
         </div>
