--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -71,10 +71,10 @@
                         <%= @listing.votes_for.size %>
                     <% end %>
                 <% else %>
-                    <div class="pull-right">
+                    <a href="#" class="pull-right">
                         <i class = "fa fa-heart"></i>
                         <%= @listing.votes_for.size %>
-                    <div>
+                    <a>
                 <% end %>
             </span>
         </div>
