--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -3,7 +3,11 @@
     <% @listings.each do |listing| %>
         <div class="panel panel-default pin-item">
             <div class="panel-body">
-              <%= link_to image_tag(listing.presigned_media_url, class: "img-responsive"), listing %>
+              <%= link_to image_tag(
+                listing.presigned_media_url,
+                class: "img-responsive",
+                onerror: "this.onerror=null;this.src='./assets/image_coming_soon.jpg';"
+              ), listing %>
             </div>
               <div class="panel-footer pin-content">
               <div class="price"><b>$<%= listing.price %></b></div>
