--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -6,7 +6,7 @@
               <%= link_to image_tag(
                 listing.presigned_media_url,
                 class: "img-responsive",
-                onerror: "this.onerror=null;this.src='./assets/image_coming_soon.jpg';"
+                onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
               ), listing %>
             </div>
               <div class="panel-footer pin-content">
