ADDED HTML meta tags to <HEAD>.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width">
+    
+    <meta charset="UTF-8">
+    <meta name="description" content="Community market place for goods and services in your neighborhood.">
+    <meta name="keywords" content="ads, advertising, auto, auto classifieds, auto dealers, business, buy, campus, cars, classified, classified ads, classifieds, community, connechub, easy, ebay, email, employment, events, free, free ads, free advertising, free classified, free classified ads online, free classifieds, free online classifieds, hard to find, housing, images, internet advertising, jobs, list, listings, local, marketing, online, online classifieds, personals, pets, place free classified ads, post, post free ads, post free classified ads, posts, real, real-estate, realestate, sale, search, sell, services, tickets, trade, unboxing, youtube">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
