ADDED or UPDATED a number of smaller items for release 1.1.5

--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -81,7 +81,7 @@
                             type: "regexp",
                             maxlength: "128",
                             pattern: "[A-Za-z\s]+",
-                            placeholder: "exp. Example Item for Sale"
+                            placeholder: "exp. Text only Listing Title"
                         %>
                     </div>
                     <br>
@@ -133,7 +133,7 @@
                             type: "text",
                             maxlength: "2048",
                             pattern: "[A-Za-z\s\!\$\,\.\?]+{2048}",
-                            placeholder: "exp. Describe the item for sale as detailed as possible."
+                            placeholder: "exp. Describe the item for sale as detailed as possible. Text, numbers, and punctuation are allowed."
                         %>
                     </div>
                     <br>
