--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1184,3 +1184,8 @@ body > div > div > div > div > ul {
 li.landing_page {
   padding: 5px 0px;
 }
+
+/* Number of items in a cat / sub-cat */
+.cat_item_count {
+  color: #4cae4c
+}
