--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -56,7 +56,9 @@
             <% @sale.subcategories.each_with_index do |subcategory, index| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@sale, subcategory) %>
-              <%= @sale_subcat_posting_count[subcategory.id] != 0 ? @sale_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @sale_subcat_posting_count[subcategory.id] != 0 ? z@sale_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -75,7 +77,9 @@
             <% @community.subcategories.each_with_index do |subcategory, index| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@community, subcategory) %>
-              <%= @community_subcat_posting_count[subcategory.id] != 0 ? @community_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @community_subcat_posting_count[subcategory.id] != 0 ? @community_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -92,7 +96,9 @@
             <% @services.subcategories.each do |subcategory| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@services, subcategory) %>
-              <%= @services_subcat_posting_count[subcategory.id] != 0 ? @services_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @services_subcat_posting_count[subcategory.id] != 0 ? @services_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -111,7 +117,9 @@
             <% @jobs.subcategories.each do |subcategory| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@jobs, subcategory) %>
-              <%= @jobs_subcat_posting_count[subcategory.id] != 0 ? @jobs_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @jobs_subcat_posting_count[subcategory.id] != 0 ? @jobs_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -130,7 +138,9 @@
             <% @housing.subcategories.each do |subcategory| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@housing, subcategory) %>
-              <%= @housing_subcat_posting_count[subcategory.id] != 0 ? @housing_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @housing_subcat_posting_count[subcategory.id] != 0 ? @housing_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -146,7 +156,9 @@
             <% @campus.subcategories.each do |subcategory| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@campus, subcategory) %>
-              <%= @campus_subcat_posting_count[subcategory.id] != 0 ? @campus_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @campus_subcat_posting_count[subcategory.id] != 0 ? @campus_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -162,7 +174,9 @@
             <% @h2f.subcategories.each do |subcategory| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@h2f, subcategory) %>
-              <%= @h2f_subcat_posting_count[subcategory.id] != 0 ? @h2f_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @h2f_subcat_posting_count[subcategory.id] != 0 ? @h2f_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -178,7 +192,9 @@
             <% @free.subcategories.each do |subcategory| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@free, subcategory) %>
-              <%= @free_subcat_posting_count[subcategory.id] != 0 ? @free_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @free_subcat_posting_count[subcategory.id] != 0 ? @free_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
@@ -194,7 +210,9 @@
             <% @unboxing.subcategories.each do |subcategory| %>
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(@unboxing, subcategory) %>
-              <%= @unboxing_subcat_posting_count[subcategory.id] != 0 ? @unboxing_subcat_posting_count[subcategory.id] : '' %>
+              <div class="cat_item_count">
+                <%= @unboxing_subcat_posting_count[subcategory.id] != 0 ? @unboxing_subcat_posting_count[subcategory.id] : '' %>
+              </div>
             </li>
             <% end %>
           </ul>
