--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,79 @@
     
     <meta charset="UTF-8">
     <meta name="description" content="Community market place for goods and services in your neighborhood.">
-    <meta name="keywords" content="ads, advertising, auto, auto classifieds, auto dealers, business, buy, campus, cars, classified, classified ads, classifieds, community, connechub, easy, ebay, email, employment, events, free, free ads, free advertising, free classified, free classified ads online, free classifieds, free online classifieds, hard to find, housing, images, internet advertising, jobs, list, listings, local, marketing, online, online classifieds, personals, pets, place free classified ads, post, post free ads, post free classified ads, posts, real, real-estate, realestate, sale, search, sell, services, tickets, trade, unboxing, youtube">
+    <meta name="keywords" content="
+ad posting sites, 
+ads, 
+advertising, 
+auto classifieds, 
+auto dealers, 
+auto, 
+business, 
+buy, 
+campus, 
+capture ad, 
+cars, 
+classified ads, 
+classified video ads, 
+classified, 
+classifieds, 
+community, 
+connechub, 
+easy, 
+ebay, 
+email, 
+employment, 
+events, 
+film, 
+free ads, 
+free advertising, 
+free classified ads online, 
+free classified posting sites, 
+free classified sites list, 
+free classified websites list, 
+free classified websites, 
+free classified, 
+free classifieds, 
+free online classifieds, 
+free, 
+hard to find, 
+housing, 
+images, 
+internet advertising, 
+jobs, 
+list, 
+listings, 
+local, 
+marketing, 
+on film, 
+online classifieds, 
+online, 
+personals, 
+pets, 
+place free classified ads, 
+post free ads, 
+post free classified ads, 
+post, 
+posts, 
+real-estate, 
+real, 
+realestate, 
+record, 
+sale, 
+search, 
+sell, 
+services, 
+tickets, 
+to post free ad, 
+to post free ads in classifieds, 
+trade, 
+unboxing, 
+video ads, 
+video, 
+visual ad, 
+visual ads, 
+youtube, 
+">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <%= stylesheet_link_tag 'application', media: 'all' %>
