UPDATED all ENV variable names to better align to new nominclature.

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container-fluid">
   <div class="text-center">
-    <%= image_tag("connechub.svg", :alt => ENV['APP_NAME'], height: 'auto', width: '75%') %>
+    <%= image_tag("connechub.svg", :alt => ENV['STAGE'], height: 'auto', width: '75%') %>
   </div>
 
   <br>
