--- a/app/views/listings/_processing_overlay.erb
+++ b/app/views/listings/_processing_overlay.erb
@@ -1,5 +1,5 @@
 <div id="overlay">
-    <%= image_tag("loading_spinner.gif", :alt => ENV['APP_NAME']) %>
+    <%= image_tag("loading_spinner.gif", :alt => ENV['STAGE']) %>
     <p>Please wait while your video uploads.</p>
     <p>The page will refresh once complete.</p>
 </div>
