--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,7 +96,7 @@ youtube,
             <span class="icon-bar"></span>
           </button>
           <% if request.fullpath != '/' %>
-            <%= link_to image_tag("connechub.svg", :alt => ENV["APP_NAME"], height: 'auto', width: '65%'), root_path, style: "float: left" %>
+            <%= link_to image_tag("connechub.svg", :alt => ENV["STAGE"], height: 'auto', width: '65%'), root_path, style: "float: left" %>
           <% end %>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
