--- a/app/views/prices/index.erb
+++ b/app/views/prices/index.erb
@@ -436,7 +436,7 @@
                     <span class="price1">Connechub is free to signup and free to use as long as you want.</span>
                     <span>
                         <a
-                            href="https://<%= ENV['APP_ENV'].downcase %>.connechub.com/users/sign_up"
+                            href="https://<%= ENV['STAGE'].downcase %>.connechub.com/users/sign_up"
                             class="button" style="background-color:MediumSeaGreen;"
                         >Get Started</a>
                     </span>
