ADDED console.log() to upload failure in the hopes of gaining some insight into what occured when it fails.

--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -166,6 +166,7 @@ $(function () {
                 progressBar.
                     css("background", "red").
                     text("Failed");
+                    console.log(e)
             }
         });
     });
