Allow numbers in listing title. https://trello.com/c/t0eFlPtR/16-allow-numbers-in-listing-title

--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -80,7 +80,7 @@
                             required: true,
                             type: "regexp",
                             maxlength: "128",
-                            pattern: "[A-Za-z\s]+",
+                            pattern: "[0-9A-Za-z\s]+",
                             placeholder: "exp. Text only Listing Title"
                         %>
                     </div>
