--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -65,9 +65,9 @@
                             class:"form-control",
                             required: true,
                             type: "number",
-                            maxlength: "32",
-                            placeholder: "exp. 1234, whole US dollar amount",
-                            min: "1",
+                            maxlength: "9",
+                            placeholder: "exp. 1.23 US Dollar amount",
+                            min: "0",
                             step: "any"
                         %>
                     </div>
@@ -79,7 +79,7 @@
                             class: "form-control",
                             required: true,
                             type: "regexp",
-                            maxlength: "128",
+                            maxlength: "256",
                             pattern: "[0-9A-Za-z\s]+",
                             placeholder: "exp. Text only Listing Title"
                         %>
@@ -163,5 +163,31 @@ $(function () {
             $("#overlay").toggle()
         }
     })
+
+  /* TODO finish this
+  issue: https://trello.com/c/XRIxhxOf/15-allow-100-item-price
+  source: https://stackoverflow.com/questions/14650932/set-value-to-currency-in-input-type-number
+  */
+  $.fn.currencyInput = function() {
+    this.each(function() {
+      var wrapper = $("<div class='currency-input' />");
+      $(this).wrap(wrapper);
+      $(this).before("<span class='currency-symbol'>$</span>");
+      $(this).change(function() {
+        var min = parseFloat($(this).attr("min"));
+        var max = parseFloat($(this).attr("max"));
+        var value = this.valueAsNumber;
+        if(value < min)
+          value = min;
+        else if(value > max)
+          value = max;
+        $(this).val(value.toFixed(2)); 
+      });
+    });
+  };
+});
+
+$(document).ready(function() {
+  $('input.currency').currencyInput();
 });
 </script>
