--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,9 +16,9 @@
       <%= text_field_tag :search, nil, placeholder: 'keywords', class: "form-control"%>
     </div>
 
-    <!-- <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-        <%#= text_field_tag :location, nil, placeholder: 'city, state or zip', class: "form-control"%>
-      </div>-->
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <%= text_field_tag :location, nil, placeholder: 'city, state or zip', class: "form-control"%>
+    </div>
 
     <div class="col-xs-12 col-sm-6">
       <%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}), class: "form-control"%>
