--- a/app/views/prices/index.erb
+++ b/app/views/prices/index.erb
@@ -22,8 +22,9 @@
         font-family: Verdana, Geneva, sans-serif;
         font-size: 16px;
         color: black;
-        text-align: center;
         padding-top: 10px;
+        text-align: center;
+        width: 100%;
         }
 
         table.center {
