--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -1,50 +1,9 @@
+<div style="height: 15px; width: 100%;"></div>
+
 <div class="container_12">
-    <%= link_to 'Connechub', root_path %>
-    <hr>
+  <%= link_to 'Connechub', root_path %> > <%= @category.name %>
+<hr>
 
-    <div class="leftbar_old col-xs-6 col-sm-8 col-md-10">
-
-    <div class = "grid transitions-enabled">
-        <% if @listings.present? %>
-            <% @listings.each do |listing| %>
-            <div class="panel panel-default pin-item">
-                <div class="panel-body">
-                    <%= render :partial => 'partials/item_card', locals: {listing: listing}  %>
-                </div>
-                    <div class="panel-footer pin-content">
-                    <div class="price"><b>$<%= listing.price %></b></div>
-                    <div class="name"><b><%= link_to listing.title, listing %></b></div>
-                    <div class="description"><%= listing.city %>, <%= listing.state %></div>
-                    <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
-                    <hr>
-                    <div>
-                        <%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>
-                            <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
-                    </div>
-                </div>
-            </div>
-            <% end %>
-        <% else %>
-        <p>No listings found!</>
-        <% end %>
-    </div>
-</div>
-<br>
-
-<div class="rightbar0 col-xs-6 col-sm-4 col-md-2">
-        <div class="rightbar">
-            <div align="center" class="rightbar-top">
-                <%= form_tag search_listings_path, class:"form-inline", method: :get do |f| %>
-                    <div class="space"><%= text_field_tag :search, nil, placeholder: 'keyword/s', class: "form-control", style: 'width: 150px; height: 30px' %></div>
-                    <div class="space"><%= text_field_tag :location, nil, placeholder: 'city, state or zip', class: "form-control" , style: 'width: 150px; height: 30px' %></div>
-                    <div class="space"><%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}), class: "form-control", style: 'width: 150px; height: 30px' %></div>
-                    <%= submit_tag 'SEARCH', class: "btn btn-success", style: 'width: 80px; height: 30px'  %>
-                </div>
-            <% end %>
-        </div>
-        <br>
-
-        <%= render :partial => 'categories/more_categories', locals: {all_categories: @all_categories}  %>
-
-    </div>
+<div class="leftbar_old col-xs-6 col-sm-8 col-md-10">
+  <%= render :partial => 'categories/show', locals: {listings: @listings}  %>
 </div>
