--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -5,5 +5,5 @@
 <hr>
 
 <div class="leftbar_old col-xs-6 col-sm-8 col-md-10">
-  <%= render :partial => 'categories/show', locals: {listings: @listings}  %>
+  <%= render :partial => 'listings/show', locals: {listings: @listings}  %>
 </div>
