REMOVED @category.name from listing/search VW.

--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -1,7 +1,7 @@
 <div style="height: 15px; width: 100%;"></div>
 
 <div class="container_12">
-  <%= link_to 'Connechub', root_path %> > <%= @category.name %>
+  <%= link_to 'Connechub', root_path %>
 <hr>
 
 <div class="leftbar_old col-xs-6 col-sm-8 col-md-10">
