--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,11 +34,16 @@
                   <% @listings.each do |listing| %>
                       <div class="panel panel-default pin-item">
                           <div class="panel-body">
-                            <%= link_to image_tag(listing.presigned_media_url, class: "img-responsive"), listing %>
+                            <%= link_to image_tag(
+                              listing.presigned_media_url,
+                              class: "img-responsive",
+                              onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
+                            ), listing %>
                           </div>
                             <div class="panel-footer pin-content">
                             <div class="price"><b>$<%= listing.price %></b></div>
                             <div class="name"><b><%= link_to listing.title, listing %></b></div>
+                            <div class="description"><%= listing.city %>, <%= listing.state %></div>
                             <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
                           <hr>
                             <% if listing.user == current_user %>
