--- a/app/views/prices/index.erb
+++ b/app/views/prices/index.erb
@@ -464,8 +464,9 @@
   <footer>
     <table>
       <table>
-        <tr><span class="bottompage">Connechub is free to signup and free to use as long as you want</span><span><button
-              class="button" style="background-color:MediumSeaGreen;">Get Started</button></span></tr>
+        <tr><span class="bottompage">Connechub is free to signup and free to use as long as you want</span><span>
+          <a href="../users/sign_up" class="button" style="background-color:MediumSeaGreen;">Get Started</a>
+        </span></tr>
       </table>
     </table>
   </footer>
